# smart-excel-copilot

./: .coverage  .gitignore  CHANGELOG.md  README.md  create_sample_data.py  install.ps1  install_ollama.ps1  pyproject.toml  requirements.txt  run_ui.ps1  set_env.ps1  setup_console.ps1  test_chart_fix.py  test_chart_openpyxl.py  test_charts_integration.py  test_natural_language.py  test_openpyxl_engine.py  test_simple.py
.github/workflows/: ci.yml  release.yml
app/: __init__.py  cli.py
app/autoexcel/: charts.py  engines.py  engines_com.py  engines_fallback.py  engines_openpyxl.py  formula.py  formulas.py  intent.py  intent_llm.py  intent_schema.py  pivot.py  report.py  runlog.py  utils.py
app/core/: logging.py  profile.py  report.py  utils.py
app/excel_ops/: clean.py  dedupe.py  impute.py  outlier.py  schema.py
app/io/: loader.py
app/recipes/: __init__.py  manager.py
app/report/: pdf.py  template.py
app/safety/: __init__.py  undo.py
app/validate/: __init__.py  dsl.py
data/automation/: auto_demo.xlsx  auto_out.xlsx  tmp_src.xlsx  (+1 more)
examples/: chart_spec.yaml  validation_example.yaml
llm/: local_llm.py
logs/: bench_last.json  kpi_last.json
recipes/: clean_dedupe_weekly.yaml
smart_excel_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: bench_run.py  conftest.py  demo_run.py  test_chart_presence.py  test_clean.py  test_intent.py
tools/: debug_columns.py  eval_kpi.py  run_goldens.py  run_report.py  schedule_recipe.ps1  stress_500k.py  test_recipe_replay.py  ui_app.py  ui_copilot.py  verify_auto_out.py  watch_run.py
(+31 files in other folders)
